# Trajectories

./: .gitignore  .pre-commit-config.yaml  @Notes.txt  CHANGELOG.md  DEVELOPING.md  NOTES.md  NOTES.md.backup  README.md  back_traj.py  requirements.txt  setup.cfg  setup.py  trajectory_compute.py  trajectory_compute_prev.py  trajectory_plot.py
.github/workflows/: pythonapp.yml
advtraj/: __init__.py  back_traj.py  compare_trajectories.py  compute_trajectories.py  interpolate.py  trajectory_plot.py  utils.py
advtraj/attic/: constants.py  data.py  mask_functions.py  monc.py
advtraj/classify/: traj_classify.py
advtraj/cli/: monc.py  uclales.py
advtraj/integrate/: __init__.py  (+2 more)
examples/: back_traj.py  cloud_classify.py  config_test_case_0.yaml  config_test_case_1.yaml  load_data.py  monc_plot_traj_anim.py  monc_test_data_to_traj.py  monc_test_data_to_traj_family.py  monc_test_traj_classify.py  monc_test_traj_compute.py  monc_test_traj_family_compute.py  monc_test_traj_family_matching_objects.py  process_clouds.py  set_options.py
notebooks/: Creating linear advection tests.ipynb  Plot position scalar fields.ipynb  Working out interpolation routines.ipynb  plot trajectory.ipynb
sandpit/: test_trajectories_halos.py  trajectory_compute.py  trajectory_compute_jfg.py  trajectory_plot_halo.py
scripts/: monc_test.py  run_tests.py
source/: back_traj.py  compute_cloud_properties.py  compute_traj_family.py  compute_trajectories.py  process_clouds.py  step.py  test_getdata.py  trajectory_compute.py  trajectory_plot.py
testing/: test_trajectrories.py  test_trajectrories_w.py
tests/: test_grid_utils.py  test_position_scalar_transforms.py  test_synthetic_data.py  utils.py
trajectories/: cloud_properties.py  cloud_selection.py  compute_cloud_properties.py  cstruct_selection.py  grid_interpolation.py  object_tools.py  trajectory_compute.py  trajectory_family.py  trajectory_plot.py  w_selection.py
(+13 files in other folders)
