[metadata]
name = advtraj
author = Leif denby
author_email = l.c.denby@leeds.ac.uk
version = attr: cloudmetrics.__version__
license = MIT
description = Offline trajectories with advected position scalars in fluid simulations
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ParaConUK/advtraj
classifiers =
    Development Status :: Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.7
install_requires =
    sklearn
    numpy
    scipy
    xarray
    netCDF4
    numba
    tqdm

setup_requires =
    setuptools >= 40.4
    setuptools_scm


[options.extras_require]
test =
  pytest
  nbval
  nb-black

dev =
  %(test)s
  ipdb
  pre-commit
  ipython


[tool:pytest]
python_files = test_*.py
testpaths = tests

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc

[isort]
profile = black
default_section = THIRDPARTY
known_first_party = advtraj


[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
